--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="social-links">
                         <a href="https://www.instagram.com" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://www.pinterest.com" aria-label="Pinterest"><i class="fab fa-pinterest-p"></i></a>
                       </div>
                     </div>
