--- a/index2.html
+++ b/index2.html
@@ -29,8 +29,11 @@
         </div>
         <button type="submit">Entrar</button>
       </form>
+
+      <button id="btnBack" type="button" class="back-button">Voltar para a Área Principal</button>
     </main>
   </div>
+
   <script src="main2.js"></script>
 </body>
 </html>
